--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "single-sign-on-component",
   "version": "1.0.0",
   "description": "Single sign-on login component for use on any dragonchain url.",
-  "main": "index.js",
+  "main": "./lib/App.js",
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss --watch --recursive",
@@ -25,11 +25,15 @@
   },
   "homepage": "https://github.com/dragonchain-inc/single-sign-on-component#readme",
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "node-sass-chokidar": "^1.3.4",
     "react-scripts": "^2.1.3"
   },
   "dependencies": {
-    "@babel/core": "^7.2.2",
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
