--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "^2.1.3"
   },
   "dependencies": {
+    "aws-amplify-react": "^2.3.0",
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
