--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@dragonchain-dev/single-sign-on-component",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "Single sign-on login component for use on any dragonchain url.",
   "main": "./lib/App.js",
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss --watch --recursive",
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p start-js",
+    "start": "npm-run-all -p watch-css start-js",
     "build-js": "REACT_APP_STAGE=production react-scripts build",
     "build-js-dev": "REACT_APP_STAGE=development react-scripts build",
     "build": "npm-run-all build-css build-js",
@@ -30,12 +30,18 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "eslint": "^5.12.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-jasmine": "^2.10.1",
+    "eslint-plugin-promise": "^4.0.1",
     "node-sass-chokidar": "^1.3.4",
     "react-scripts": "^2.1.3"
   },
   "dependencies": {
     "@dragonchain-dev/cognito-wrapper": "^4.0.12",
     "aws-amplify-react": "^2.3.0",
+    "babel-eslint": "^10.0.1",
     "npm-run-all": "^4.1.5",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
