--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,10 @@
 {
-		"presets": [
-				"@babel/preset-env",
-				"@babel/preset-react"
-		]
+	"presets": [
+			"@babel/preset-env",
+			"@babel/preset-react",
+	],
+	"plugins": [
+		"@babel/plugin-proposal-class-properties",
+		"inline-react-svg"
+	]
 }
