--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "@dragonchain-dev/single-sign-on-component",
-  "version": "1.0.2",
+  "version": "1.2.0",
   "description": "Single sign-on login component for use on any dragonchain url.",
-  "main": "./lib/App.js",
+  "main": "./dest/App.js",
+  "files": [
+    "/dest"
+  ],
   "scripts": {
-    "build-css": "node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss --watch --recursive",
-    "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build-js": "REACT_APP_STAGE=production react-scripts build",
-    "build-js-dev": "REACT_APP_STAGE=development react-scripts build",
-    "build": "npm-run-all build-css build-js",
-    "build-dev": "npm-run-all build-css build-js-dev",
-    "test": "react-scripts test"
+    "build": "gulp clean && gulp build && gulp assets",
+    "test": "gulp clean && gulp build && gulp spec --require babel-polyfill",
+    "clean": "gulp clean",
+    "watch": "gulp --require babel-polyfill",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -27,26 +26,31 @@
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "eslint": "^5.12.1",
+    "babel-plugin-inline-react-svg": "^1.0.1",
+    "del": "^3.0.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-babel": "^5.3.0",
     "eslint-plugin-jasmine": "^2.10.1",
     "eslint-plugin-promise": "^4.0.1",
-    "node-sass-chokidar": "^1.3.4",
-    "react-scripts": "^2.1.3"
+    "eslint-plugin-react": "^7.12.4",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-eslint": "^5.0.0",
+    "gulp-jasmine": "^4.0.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-svg-sprite": "^1.5.0"
   },
   "dependencies": {
     "@dragonchain-dev/cognito-wrapper": "^4.0.12",
     "aws-amplify-react": "^2.3.0",
-    "babel-eslint": "^10.0.1",
-    "npm-run-all": "^4.1.5",
+    "babel-polyfill": "^6.26.0",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "reactstrap": "^7.1.0",
-    "webpack-cli": "^3.2.1"
+    "reactstrap": "^7.1.0"
   },
   "browserslist": [
     ">0.2%",
