--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@dragonchain-dev/single-sign-on-component",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "Single sign-on login component for use on any dragonchain url.",
-  "main": "./dest/App.js",
+  "main": "./dist/App.js",
   "files": [
-    "/dest"
+    "/dist"
   ],
   "scripts": {
     "build": "gulp clean && gulp build && gulp assets",
