Install in buildspec

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,7 @@ phases:
     commands:
       - wget https://github.com/stedolan/jq/releases/download/jq-1.5/jq-1.5.tar.gz && tar xzf jq-1.5.tar.gz && cd jq-1.5 && ./configure && make && make install && cd ..
       - NPM_TOKEN=$(aws secretsmanager get-secret-value --secret-id=npm/publish/token | jq -r '.SecretString | fromjson | .NPM_TOKEN')
+      - npm install
   post_build:
     commands:
       - npm publish
