--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
       "global-require": 0,
       "import/no-extraneous-dependencies": 0,
       "import/no-named-as-default": 0,
+      "no-underscore-dangle": 0,
       "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
       "react/jsx-uses-vars": ["error"],
       "jsx-a11y/anchor-is-valid": [ "error", {
