--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dragonchain-dev/single-sign-on-component",
-  "version": "4.0.4",
+  "version": "4.0.5",
   "description": "Single sign-on login component for use on any dragonchain url.",
   "main": "./dist/index.js",
   "files": [
@@ -45,10 +45,12 @@
   },
   "dependencies": {
     "@dragonchain-dev/cognito-wrapper": "^4.0.20",
-    "babel-polyfill": "^6.26.0",
     "mixpanel-browser": "^2.28.0",
-    "prop-types": "^15.6.2",
+    "prop-types": "^15.7.2",
     "react": "^16.7.0"
+  },
+  "peerDependencies": {
+    "babel-polyfill": "^6.26.0"
   },
   "browserslist": [
     ">0.2%",
