--- a/package.json
+++ b/package.json
@@ -6,6 +6,23 @@
   "files": [
     "/dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dragonchain-inc/single-sign-on-component.git"
+  },
+  "authors": [
+    "Eric Tesenair",
+    "Noah Gribbin",
+    "Regan Karlewicz",
+    "Dean Shelton",
+    "Matthew Moya",
+    "Todd Wilson"
+  ],
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/dragonchain-inc/single-sign-on-component/issues"
+  },
+  "homepage": "https://github.com/dragonchain-inc/single-sign-on-component#readme",
   "scripts": {
     "build": "gulp clean && gulp build",
     "test": "gulp clean && gulp build && gulp spec --require babel-polyfill",
@@ -13,16 +30,6 @@
     "watch": "gulp --require babel-polyfill",
     "prepare": "npm run build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dragonchain-inc/single-sign-on-component.git"
-  },
-  "author": "Dragonchain Developers",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/dragonchain-inc/single-sign-on-component/issues"
-  },
-  "homepage": "https://github.com/dragonchain-inc/single-sign-on-component#readme",
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
@@ -31,35 +38,36 @@
     "babel-eslint": "^10.0.1",
     "babel-polyfill": "^6.26.0",
     "del": "^3.0.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jasmine": "^2.10.1",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-promise": "^4.0.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-eslint": "^5.0.0",
     "gulp-jasmine": "^4.0.0",
     "gulp-sourcemaps": "^2.6.4",
-    "react": "^16.7.0"
+    "prettier": "^1.19.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "dependencies": {
-    "@dragonchain-dev/cognito-wrapper": "^5.0.2"
+    "@dragonchain-dev/cognito-wrapper": "^5.0.3",
+    "prop-types": "^15.7.2"
   },
   "peerDependencies": {
-    "babel-polyfill": "^6.26.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.7.0"
+    "babel-polyfill": ">=6.26.0",
+    "react": ">= 16.8.0",
+    "react-dom": ">= 16.8.0"
   },
   "browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "directories": {
-    "lib": "lib"
-  }
+  ]
 }
