--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ deploy:
     provider: npm
     email: "$NPM_EMAIL"
     api_key: "$NPM_API_TOKEN"
-    skip_cleanup: true
+    cleanup: true
     on:
       branch: master
