--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ before_deploy:
 
 deploy:
     provider: npm
-    email: "$NPM_EMAIL"
-    api_key: "$NPM_API_TOKEN"
+    email: $NPM_EMAIL
+    api_key: $NPM_API_TOKEN
     cleanup: true
     on:
       branch: master
