--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,6 @@
 {
-	"presets": [
-    "@babel/preset-env",
-    "@babel/preset-react"
-	],
-	"plugins": [
-		"@babel/plugin-proposal-class-properties"
-	]
+  "presets": ["./tools/babel-preset-es2015", "@babel/preset-react"],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
+  ]
 }
