--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,9 @@
   "plugins": ["prettier", "react-hooks"],
   "env": {
     "browser": true,
-    "es6": true
+    "commonjs": true,
+    "es6": true,
+    "node": true
   },
   "globals": {
     "fetch": true,
