--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dragonchain-dev/single-sign-on-component",
-  "version": "6.2.11",
+  "version": "7.0.0",
   "description": "Single sign-on login component for use on any dragonchain domain.",
   "license": "Apache-2.0",
   "authors": [
@@ -35,12 +35,14 @@
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
+    "assert": "^2.0.0",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.2",
+    "crypto-browserify": "^3.12.0",
     "del": "^3.0.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -50,9 +52,15 @@
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "events": "^3.3.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
     "prettier": "^1.19.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-router-dom": "^6.3.0",
+    "stream-browserify": "^3.0.0",
+    "url": "^0.11.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
